--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/IMG_20231020_212854_038.jpeg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG_20231020_212854_038.jpeg" alt="Your Profile Picture" class="profile-picture">
             <h2>NISHA V</h2>
         </div>
     </header>
